--- a/SecretHitlerGameHandler/SecretHitlerGameHandler.csproj
+++ b/SecretHitlerGameHandler/SecretHitlerGameHandler.csproj
@@ -7,4 +7,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\SecretHitlerBackend\SecretHitlerBackend.csproj" />
+    </ItemGroup>
+
 </Project>
