--- a/SecretHitlerServerFrontend/SecretHitlerServerFrontend.csproj
+++ b/SecretHitlerServerFrontend/SecretHitlerServerFrontend.csproj
@@ -1,19 +1,18 @@
-<Project Sdk="Microsoft.NET.Sdk.BlazorWebAssembly">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <ValidateExecutableReferencesMatchSelfContained>false</ValidateExecutableReferencesMatchSelfContained>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.2" />
-    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.2" PrivateAssets="all" />
+    <PackageReference Include="Profanity.Detector" Version="0.1.8" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\SecretHitlerBackend\SecretHitlerBackend.csproj" />
     <ProjectReference Include="..\SecretHitlerGameHandler\SecretHitlerGameHandler.csproj" />
   </ItemGroup>
+
 </Project>
