Refactor game home page and enhance user experience
Removed default Index.razor and added home screen with CSS animations and dynamic behavior to improve user experience. Added dynamic head outlet component for more flexible layouts. Migrated Round.cs within Game folder for cleaner structure. Adjusted various game actions (e.g. president trigger in GameController.cs) and audio effects for more immersive gameplay. Minor tweaks to other files for consistency and optimization.

--- a/Old/SecretHitlerServerFrontend/SecretHitlerServerFrontend.csproj
+++ b/Old/SecretHitlerServerFrontend/SecretHitlerServerFrontend.csproj
@@ -15,4 +15,9 @@
     <ProjectReference Include="..\SecretHitlerGameHandler\SecretHitlerGameHandler.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="wwwroot\fonts\Futura\Futura Medium.woff" />
+    <_ContentIncludedByDefault Remove="wwwroot\fonts\Futura\Futura Medium.woff2" />
+  </ItemGroup>
+
 </Project>
