--- a/SecretHitler/SecretHitler.csproj
+++ b/SecretHitler/SecretHitler.csproj
@@ -24,4 +24,9 @@
       </Content>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Pages\Game\" />
+      <Folder Include="wwwroot\mp3\" />
+    </ItemGroup>
+
 </Project>
